2013-02-19  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.15

2013-02-19  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-filter-html.c (html_convert): Fixed to convert the
	last line of input even if it doesn't end with a \n.

2013-02-18  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.14

2013-02-18  Jeffrey Stedfast  <fejj@gnome.org>

	* util/url-scanner.c (url_addrspec_start): Fixed the logic to
	actually scan for the beginning of the mailbox.

2012-12-09  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.13

2012-11-26  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-header.c (g_mime_header_iter_first): Make sure the
	list isn't empty.
	(g_mime_header_iter_last): Same.

2012-11-23  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-header.c (g_mime_header_list_prepend): Prepend the
	header to the list, don't *append* it. Oops.
	(g_mime_header_list_clear): Don't forget to reset the linked list
	so that it doesn't contained free'd nodes.

2012-11-02  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.12

2012-10-27  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-stream-filter.c (stream_read): Initialize presize to
	READ_PAD instead of READ_SIZE to prevent potential buffer
	underruns.

2012-10-20  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-filter-gzip.c (gunzip_filter): Apparently
	Z_BUF_ERROR isn't actually an error unless there is input
	available. Thanks to Pavlo <devgs@ukr.net> for this patch.

2012-10-19  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c (parser_push_boundary): Don't use strcmp to
	check if the boundary is an mbox boundary, use a direct pointer
	comparison so that we can handle Content-Type boundary parameters
	with a value of "From "

2012-10-19  Jeffrey Stedfast  <jeff@xamarin.com>
